Fixed Button Overflow Styles

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -276,8 +276,12 @@ body {
 }
 
 .btn {
+  max-width: 275px;
   border: none;
   border-radius: 2px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space:nowrap;
   display: inline-block;
   height: 36px;
   line-height: 36px;
